crates/rsspec_macros/tests/ui/async_it_non_clone_fixture.stderr
error[E0277]: the trait bound `NotClone: Clone` is not satisfied
  --> tests/ui/async_it_non_clone_fixture.rs:15:29
   |
15 |             before_all!(nc: NotClone = NotClone { base: 1 });
   |                             ^^^^^^^^ the trait `Clone` is not implemented for `NotClone`
   |
note: required by a bound in `rsspec::__rt::fixture_cloned`
  --> $WORKSPACE/crates/rsspec/src/lib.rs
   |
   |     pub fn fixture_cloned<T: Clone + 'static>() -> T {
   |                              ^^^^^ required by this bound in `fixture_cloned`
help: consider annotating `NotClone` with `#[derive(Clone)]`
   |
 8 + #[derive(Clone)]
 9 | struct NotClone {
   |
